fixed print align in FF by removing top:0 left:0

--- a/css/style.css
+++ b/css/style.css
@@ -582,8 +582,6 @@ input[type='number'] {
 	}
 	.export_current_piece {
 		position: absolute;
-		left:0;
-		top;0;
 		margin:0;
 		padding:0;
 	}
